# psychoquine

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FILE_MANIFEST.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REPOSITORY_STATUS.md  SECURITY.md  rustfmt.toml  setup.sh  verify.sh
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: escape.rs  formatter.rs  generator.rs  lib.rs  main.rs
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
examples/: README.md  basic_usage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
ui/: deno.json  fresh.config.ts  fresh.gen.ts
ui/components/: TerminalFrame.tsx
ui/islands/: QuineGenerator.tsx
ui/routes/: _404.tsx  _app.tsx  index.tsx
ui/static/: styles.css
