[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sxnnyside Project"]
license = "MIT"
repository = "https://github.com/Sxnnyside-Project/psychoquine"
description = "Universal resource-agnostic Quine generator"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
