[package]
name = "psychoquine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core quine generation engine for PsychoQuine"

[lib]
name = "psychoquine_core"
path = "src/lib.rs"

[[bin]]
name = "psychoquine"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
atty = "0.2"

[[example]]
name = "basic_usage"
path = "../examples/basic_usage.rs"

