[package]
name = "psychoquine-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tauri desktop application for PsychoQuine"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
psychoquine-core = { path = "../core" }
tauri = { version = "1.6", features = ["shell-open", "clipboard-write-text"] }
serde.workspace = true
serde_json.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
